# llmqg

./: .gitignore  README.md  ans_len.py  coverage.py  datasets.py  download_datasets.sh  llm_utils.py  my_datasets.py  plot.py  plot_utils.py  prompts.py  pyproject.toml  run.py
experiments/: ans_len.py  coverage.py  human.py
utils/: datasets.py  llm_utils.py  prompts.py
