[tool.poetry]
name = "llmqg"
version = "0.1.0"
description = ""
authors = ["nociza <azicon@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.7.0"
pandas = "^2.2.3"
tqdm = "^4.66.5"
openai = "^1.51.2"
nltk = "^3.9.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
